# projet-rush-hour

./: CMakeLists.txt  README.md  generate.cpp  generate.h  interface.cpp  interface.h  main.cpp  move.cpp  move.h
plateau/: plateau1 (1).json  plateau1.json  plateau1.txt  plateau1_delaroche_loris.json  plateau1_nezha_boufrou.json  plateau2 (1).json  plateau2.json  plateau2.txt  plateau2_delaroche_loris.json  plateau2_samira_kettami.json  plateau3.json  plateau4.json  plateau6.json  plateautest.json  plateautest2.json
src/: generate.cpp  generate.h  gennewplateau.cpp  interface.cpp  interface.h  main.cpp  move.cpp  move.h  selection.cpp  selection.h  solve.cpp  solve.h  type.cpp  type.h
